Fix spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,6 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   height: 80px;
   transition: all 0.5s;
   z-index: 997;
-  transition: all 0.5s;
   background: #0d2735;
 }
 
@@ -2530,5 +2529,9 @@ ul {
 @media (max-width: 768px) {
   .removepadding {
     padding: 0!important;
+  }
+
+  #hero p {
+    margin-bottom: 5px;
   }
 }
